// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`automation - planning input - openAI > input value 1`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 2`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
  {
    "param": {
      "value": "Enter",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 3`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 4`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
  {
    "param": {
      "value": "Enter",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 5`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 6`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
  {
    "param": {
      "value": "Enter",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 7`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 8`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
  {
    "param": {
      "value": "Enter",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value 9`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value 10`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "learning english",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
  {
    "param": {
      "value": "Enter",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "KeyboardPress",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 1`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn English tomorrow",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 2`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn Skiing",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 3`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 4`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn English tomorrow",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 5`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn Skiing",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 6`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 7`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn English tomorrow",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 8`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn Skiing",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 9`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 10`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn English tomorrow",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 11`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn Skiing",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 12`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 13`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn English tomorrow",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 14`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn Skiing",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;

exports[`automation - planning input - openAI > input value Add, delete, correct and check 15`] = `
[
  {
    "param": {
      "prompt": "",
    },
    "quickAnswer": {
      "id": "fbc2d0029b",
      "reason": "",
      "text": "",
    },
    "thought": undefined,
    "type": "Locate",
  },
  {
    "param": {
      "value": "Learn",
    },
    "quickAnswer": null,
    "thought": undefined,
    "type": "Input",
  },
]
`;
